# mago3d-converter

./: Cargo.toml  README.md
citygml/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
tiles3d/: Cargo.toml
tiles3d/src/: lib.rs
tiles3d/src/types/: asset.rs  binary_body_reference.rs  bounding_volume.rs  extension_schema_json.rs  extras_schema_json.rs  feature_table.rs  mod.rs  properties.rs  tile.rs  tile_content.rs  tile_content_data.rs  tileset.rs
tiles3d/tests/: bounding_volume_test.rs  tileset.json  tileset_test.rs
