[package]
name = "tiles3d"
version = "0.1.0"
edition = "2018"

[dependencies]
nom = { version = "7.0.0-alpha1"}
quick-xml = "0.22.0"
serde = { version = "1.0.127",  features = ["derive"]}
serde_json = "1.0.66"

[dependencies.gltf]
version = "0.16"
features = ["extras", "names"]

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"]}